END=

paraver_cfgs = \
 paraver_cfgs/DLB_cpus(4).cfg \
 paraver_cfgs/DLB_cpus(8).cfg \
 paraver_cfgs/DLB_cpus(16).cfg \
 paraver_cfgs/DLB_mode.cfg \
 paraver_cfgs/DLB_runtime.cfg \
 paraver_cfgs/DLB_num_threads.cfg \
 $(END)

  paravercfgsdir = $(datadir)
  nobase_dist_paravercfgs_DATA = $(paraver_cfgs)

